# old_control_board_airpurifier

./: CMakeLists.txt  README.md  esp32-platform.xml  partitions.csv  partitions_4M.csv  sdkconfig
ci/: calcCrc.sh  cppcheck-all.sh  format-all.sh  pre-commit-format-all.sh
ci/githooks/: pre-commit
doc/doxygen/: Doxyfile
doc/sphinx/source/: Architecture.md  BoardConnectors.md  Device.md  Doc.md  FactorySetting.md  Interface.md  Introduction.md  MemoryMap.md  Protocols.md  Tools.md  Versions.md  Webserver.md  conf.py  index.rst
doc/sphinx/source/_static/: custom.css
doc/sphinx/source/docx/: 10665tco21_API.docx
doc/sphinx/source/drawio/: iCon_func.drawio  memoryMap.drawio  webserver.drawio
esp-azure/azure-iot-sdk-c/: azure-iot-sdk-c.c
esp-azure/azure-iot-sdk-c/c-utility/src/: consolelogger.c
esp-azure/azure-iot-sdk-c/umqtt/src/: mqtt_client.c
esp-azure/port/: CMakeLists.txt  port.c
main/: CMakeLists.txt  main.c
main/app/: config.h
main/app/cloud/: custom_hsm_x509.c  iotHubClient.c  iotHubClient.h  postDataSeving.c  postDataSeving.h
main/app/common/: messageParserAndSerializer.c  messageParserAndSerializer.h  messageType.c  messageType.h
main/app/device/: alarmHandling.c  alarmHandling.h  deviceInit.c  deviceInit.h  deviceManager.c  deviceManager.h
main/app/production/: deviceInitProduction.c  deviceInitProduction.h  deviceManagerProduction.c  deviceManagerProduction.h
main/app/webServer/: webServer.c  webServer.h
main/app/webServer/front/: README.md
main/driver/adcDriver/: adcDriver.c  adcDriver.h
main/driver/ethernetDriver/: ethernetDriver.c  ethernetDriver.h
main/driver/externalFlashDriver/: externalFlashDriver.c  externalFlashDriver.h
main/driver/factorySettingsDriver/: factorySettingsDriver.c  factorySettingsDriver.h
main/driver/fanDriver/: fanDriver.c  fanDriver.h
main/driver/ftToolDriver/: ftToolDriver.c  ftToolDriver.h
main/driver/gpioExpanderDriver/: gpioExpanderDriver.c  gpioExpanderDriver.h
main/driver/gpioIsrDriver/: gpioIsrDriver.c  gpioIsrDriver.h
main/driver/ledDriver/: ledDriver.c  ledDriver.h
main/driver/mcuDriver/: mcuDriver.c  mcuDriver.h
main/driver/nvsDriver/: nvsDriver.c  nvsDriver.h
main/driver/rtcDriver/: rtcDriver.c  rtcDriver.h
main/driver/templateDriver/: templateDriver.c  templateDriver.h
main/driver/timeDriver/: timeDriver.c  timeDriver.h
main/driver/timerDriver/: timerDriver.c  timerDriver.h
main/driver/touchDriver/: touchDriver.c  touchDriver.h
main/driver/uvLampDriver/: uvLampDriver.c  uvLampDriver.h
main/middleware/: setting.c  setting.h
main/middleware/fan/: fan.c  fan.h
main/middleware/ftTool/: ftTool.c  ftTool.h  ftToolUser.c  ftToolUser.h
main/middleware/led/: led.c  led.h
main/middleware/location/: location.c  location.h
main/middleware/ota/: ota.c  ota.h
main/middleware/scheduler/: scheduler.c  scheduler.h
main/middleware/template/: template.c  template.h
main/middleware/touch/: touch.c  touch.h
main/middleware/utils/circBuff/: circBuff.c  circBuff.h
main/middleware/utils/circQueue/: circQueue.c  circQueue.h
main/middleware/utils/meanFilter/: meanFilter.c  meanFilter.h
main/middleware/utils/multiBuffer/: multiBuffer.c  multiBuffer.h
main/middleware/uvLamp/: uvLamp.c  uvLamp.h
main/middleware/wifi/: wifi.c  wifi.h
ut/: CMakeLists.txt
ut/main/driver/: driver.cmake
ut/main/driver/templateDriver/: templateDriverTests.c
ut/main/middleware/: middleware.cmake
ut/main/middleware/template/: templateTests.c
ut/utFramework/: minunit.h
ut/utPlatformIncludes/: malloc.h  portmacro.h  utDefines.h
ut/utTestDoubles/: fakeTemplate.h  fakeTemplateDriver.h
